<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">

    <FrameLayout
        android:id="@+id/flregistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        //muestra imagen de perfil

        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/all"
            app:srcCompat="@drawable/profile_photo"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title_active_login"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        //campo para ingresar el correo electronico

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:autofillHints="@string/email"
            android:background="@drawable/ic_field"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp" />


        //Campo para ingresar contraseña

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:autofillHints="@string/password"
            android:background="@drawable/ic_field"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp" />

        <TextView
            android:id="@+id/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/registrar"
            android:textColor="@color/blue"
            android:textColorLink="@color/blue"
            android:textSize="14sp" />

        //Boton que permite iniciar sesion en la app

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/GoogleBtn"
            android:layout_width="125dp"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_redes"
            android:drawableLeft="@drawable/ic_google"
            android:text="Google"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/FaceBookBtn"
            android:layout_width="128dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_redes"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="Facebook"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInAppCompatButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="160dp"
            android:background="@drawable/ic_buttom"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/login"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>