<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentoComprador.HomeCompradorFragment">

        <TextView
            android:id="@+id/tvTituloComprador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/TextBienvenida"
            android:textAppearance="?attr/textAppearanceHeadline3"
            android:layout_marginTop="@dimen/marginTextTopTile"
            />

    <ImageView
        android:id="@+id/ivlogo"
        android:layout_width="212dp"
        android:layout_height="232dp"
        android:layout_marginTop="@dimen/MargincardDefaul"
        android:scaleType="centerCrop"
        android:src="@drawable/logoapp"
        android:layout_marginBottom="@dimen/cardimgAncho"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lydatosPersonales"
        />

    <LinearLayout
        android:id="@+id/lydatosPersonales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloComprador"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="@dimen/cardimgAncho"

        >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/cardimgAncho"
        android:layout_marginBottom="6dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextDtPernalesConpra"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvdpCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextPruebaitem"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextDtPernalesCorreo"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvdpCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextPruebaitem"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="6dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextDtPernalesDir"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvdpDir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextPruebaitem"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextDtPernalesTel"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvdpTel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextPruebaitem"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:layout_marginLeft="8dp"/>

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarComprador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

