<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragmento.PvAdminFragment">

        <TextView
            android:id="@+id/tvTirulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Crear Puesto de Venta"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/TextPersonal"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/tenombre"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/cardimgAncho" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tenombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/TextNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTirulo"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tenombre1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tedocumento"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/TextDoc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tenombre"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tedocumento1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/teTelefono"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/TextTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tedocumento"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teTelefono1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/teEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/TextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teTelefono"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teEmail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tePassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/TextPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/teEmail"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tePassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Datos del negocio"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/tepuesto"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/cardimgAncho" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tepuesto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Nombre Puesto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tePassword"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tepuesto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardarNegocio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tepuesto"
            android:text="Crear Puesto"
            android:layout_marginTop="@dimen/cardimgAncho"/>


    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
