<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentoComprador.RegistroCompradorFragment">

        <TextView
            android:id="@+id/Titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Registro de Usuario"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Ingrese nombre"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/nombreComprador"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/cardimgAncho" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreComprador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/TextNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Titulo"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nombreComprador1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Ingrese Identificacion"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/idComprador"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/cardimgAncho" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idComprador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/TextDoc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nombreComprador"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idComprador1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Ingrese Telefono"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/telComprador"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/cardimgAncho" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telComprador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/TextTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idComprador"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/telComprador1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Ingrese Direccion"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/dirComprador"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/cardimgAncho" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dirComprador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Direccion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telComprador"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dirComprador1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Ingrese Correo electronico"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/emailComprador"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/cardimgAncho" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailComprador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/TextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dirComprador"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailComprador1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Ingrese Contraseña"
            android:textAppearance="?attr/textAppearanceSubtitle1"
            app:layout_constraintBottom_toTopOf="@+id/passwordComprador"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="@dimen/cardimgAncho" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordComprador"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/TextPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailComprador"
            android:layout_marginStart="@dimen/cardimgAncho"
            android:layout_marginEnd="@dimen/cardimgAncho">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordComprador1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordComprador"
            android:text="Registrar"
            android:layout_marginTop="@dimen/cardimgAncho"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>